name: synchronized
version: 0.1.0
build-type: Simple
cabal-version: >= 1.10
license: BSD3
license-file: LICENSE

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
      base
    , ghc-prim
    , hashable
    , stm
    , template-haskell
    , text
    , unordered-containers
  exposed-modules:
    Control.Concurrent.Synchronized
  other-modules:
    Control.Concurrent.Synchronized.Internal
