name: synchronized
version: 0.1.0
build-type: Simple
cabal-version: >= 1.10
license: BSD3
license-file: LICENSE

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
      base
    , hashable
    , hashtables
    , stm
    , template-haskell
    , text-short
  exposed-modules:
    Control.Concurrent.Synchronized

benchmark synchronized-bench
  hs-source-dirs: bench
  main-is: Main.hs
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options: -O -threaded -Wall -rtsopts "-with-rtsopts=-N4"
  build-depends:
      base
    , deepseq
    , gauge
    , stm
    , synchronized
